# ASR-CRaFT

./: .gitignore  Makefile.am  README  README.md  configure.ac
CRF/: .cdtbuild  .cproject  .project  .project_initial  Makefile.am
CRF/CVS/: Entries  Repository
CRF/Debug/: makefile  sources.mk
CRF/Debug/src/: CRF_FeatureMap.d  CRF_FeatureStream.d  CRF_FeatureStreamManager.d  CRF_GradAccumulator.d  CRF_GradBuilder.d  CRF_InFtrStream_RandPresent.d  CRF_InLabStream_RandPresent.d  CRF_LBFGSTrainer.d  CRF_LabelPath.d  CRF_LatticeBuilder.d  CRF_LocalPosteriorBuilder.d  CRF_LogMath.d  CRF_Model.d  CRF_NewGradBuilder.d  CRF_NewGradBuilderLog.d  CRF_NewGradBuilderSparseLog.d  CRF_NewLocalPosteriorBuilder.d  CRF_NewViterbi.d  CRF_Pthread_GradAccumulator.d  CRF_SGTrainer.d  CRF_Seq.d  CRF_SparseFeatureMap.d  CRF_StateNode.d  CRF_StateVector.d  CRF_StdFeatureMap.d  CRF_StdGradBuilder.d  CRF_StdGradBuilderLog.d  CRF_StdNStateNode.d  CRF_StdNStateNodeLog.d  CRF_StdNStateVector.d  CRF_StdNStateVectorLog.d  CRF_StdSparseFeatureMap.d  CRF_StdStateNode.d  CRF_StdStateNodeLog.d  CRF_StdStateVector.d  CRF_StdStateVectorLog.d  CRF_StdTransFeatureMap.d  CRF_Trainer.d  lbfgs.d  subdir.mk
CRF/Release/: makefile
CRF/Release/src/: subdir.mk
CRF/hold/: CRF_BaseMatrix.cpp.nocompile  CRF_BaseMatrix.h.nocompile  CRF_NstateGradBuilder.cpp.nocompile  CRF_NstateGradBuilder.h.nocompile  CRF_NstateGradBuilderLog.cpp.nocompile  CRF_NstateGradBuilderLog.h.nocompile  CRF_StdRange.cpp.nocompile  CRF_StdRange.h.nocompile  CRF_StdTransRange.cpp.nocompile  CRF_StdTransRange.h.nocompile  CRF_TransitionMatrix.cpp.nocompile  CRF_TransitionMatrix.h.nocompile  CRF_TransitionMatrixLog.cpp.nocompile  CRF_TransitionMatrixLog.h.nocompile  CRF_Viterbi.cpp.nocompile  CRF_Viterbi.h.nocompile
CRF/src/: CRF.h  CRF_AISTrainer.cpp  CRF_AISTrainer.h  CRF_CountAccumulator.h  CRF_FeatureMap.cpp  CRF_FeatureMap.h  CRF_FeatureStream.cpp  CRF_FeatureStream.h  CRF_FeatureStreamManager.cpp  CRF_FeatureStreamManager.h  CRF_FerrGradBuilder.cpp  CRF_FerrGradBuilder.h  CRF_GradAccumulator.cpp  CRF_GradAccumulator.h  CRF_GradBuilder.cpp  CRF_GradBuilder.h  CRF_InFtrStream_RandPresent.cpp  CRF_InFtrStream_RandPresent.h  CRF_LBFGSTrainer.cpp  CRF_LBFGSTrainer.h  CRF_LabelPath.h  CRF_LatticeBuilder.cpp  CRF_LatticeBuilder.h  CRF_LocalPosteriorBuilder.cpp  CRF_LogMath.cpp  CRF_LogMath.h  CRF_MLFManager.h  CRF_Model.cpp  CRF_Model.h  CRF_NewGradBuilder.cpp  CRF_NewGradBuilder.h  CRF_NewGradBuilderLog.cpp  CRF_NewGradBuilderLogMasked.cpp  CRF_NewGradBuilderLogSoft.cpp  CRF_NewGradBuilderLogSoft.h  CRF_NewGradBuilderSparseLog.h  CRF_NewLocalPosteriorBuilder.cpp  CRF_NewLocalPosteriorBuilder.h  CRF_NewViterbi.cpp  CRF_Pthread_CountAccumulator.cpp  (+35 more)
CRF/src/CVS/: Entries  Repository
CRF/src/decoders/: CRF_LatticeBuilder.cpp  CRF_LatticeBuilder.h  CRF_LatticeBuilderTemplate.cpp  CRF_LatticeBuilderTemplate.h  CRF_LatticeBuilder_StdSeg.cpp  CRF_LatticeBuilder_StdSeg.h  CRF_LatticeBuilder_StdSeg_WithoutDurLab.cpp  CRF_LatticeBuilder_StdSeg_WithoutDurLab.h  CRF_LatticeBuilder_StdSeg_WithoutDurLab_WithoutSegTransFtr.cpp  CRF_LatticeBuilder_StdSeg_WithoutDurLab_WithoutSegTransFtr.h  CRF_NewLocalPosteriorBuilder.cpp  CRF_NewLocalPosteriorBuilder.h  CRF_ViterbiDecoder.cpp  CRF_ViterbiDecoder.h  CRF_ViterbiDecoder_StdSeg_NoSegTransFtr.cpp  CRF_ViterbiDecoder_StdSeg_NoSegTransFtr.h  CRF_ViterbiNode_PruneTrans.cpp  CRF_ViterbiNode_PruneTrans.h
CRF/src/depricated/: CRF_LabelPath.cpp  CRF_LocalPosteriorBuilder.h  CRF_NewGradBuilderLog.cpp  CRF_NewGradBuilderLog.h  CRF_NewGradBuilderLogMasked.h  CRF_NewGradBuilderSparseLog.cpp  CRF_NewViterbi.cpp  CRF_NewViterbi.h  CRF_Seq.h  CRF_SparseFeatureMap.cpp  CRF_SparseFeatureMap.h  CRF_StdFeatureMapOld.cpp  CRF_StdGradBuilder.cpp  CRF_StdGradBuilderLog.h  CRF_StdNStateNodeLogMasked.cpp  CRF_StdNStateNodeMasked.cpp  CRF_StdNStateNodeMasked.h  CRF_StdNStateVector.h  CRF_StdNStateVectorLog.cpp  CRF_StdSparseFeatureMapOld.cpp  CRF_StdSparseFeatureMapOld.h  CRF_StdStateNodeLog.cpp  CRF_StdStateNodeLog.h  CRF_StdStateNodeLogMasked.cpp  CRF_StdStateNodeLogMasked.h  CRF_StdStateNodeMasked.cpp  CRF_StdStateNodeMasked.h  CRF_StdStateVectorLog.cpp  CRF_StdStateVectorLog.h  CRF_StdTransFeatureMap.h  CRF_ViterbiDecoder_StdSeg_NoSegTransFtr_BestTrans_IndepOfState.cpp  CRF_ViterbiDecoder_StdSeg_NoSegTransFtr_BestTrans_IndepOfState.h
CRF/src/ftrmaps/: CRF_FeatureMap.cpp  CRF_FeatureMap.h  CRF_StdFeatureMap.cpp  CRF_StdFeatureMap.h  CRF_StdSparseFeatureMap.cpp  CRF_StdSparseFeatureMap.h
CRF/src/io/: CRF_FeatureStream.cpp  CRF_FeatureStream.h  CRF_FeatureStreamManager.cpp  CRF_FeatureStreamManager.h  CRF_InFtrStream_RandPresent.cpp  CRF_InFtrStream_RandPresent.h  CRF_InFtrStream_SeqMultiWindow.cpp  CRF_InFtrStream_SeqMultiWindow.h  CRF_InLabStream_RandPresent.cpp  CRF_InLabStream_RandPresent.h  CRF_InLabStream_SeqMultiWindow.cpp  CRF_InLabStream_SeqMultiWindow.h  CRF_MLFManager.cpp  (+1 more)
CRFVectorTest/: .cdtbuild  .cproject  .project  .project_initial  Makefile.am  configure.ac
CRFVectorTest/Debug/: CRFVectorTest  makefile
CRFVectorTest/src/: Main.cpp
demo/: Makefile.am  scrf-timit-demo.sh.in  segmental-timit-demo.cfg  segmental-timit-demo.cfg.in
demo/data/: timit_sisx_test.core+rest.neworder.olist  timit_sisx_test.core.neworder.olist  timit_sisx_train.olist  timit_test39.mlf  timit_train.48labs.3state.ilab  timit_train.mlf
demo/kaldi-mods/: Makefile.am  run.sh
demo/mylocal/: htk_to_pf.sh  timit_sisx_test.neworder.olist.kaldi_to_htk_to_pfile  timit_sisx_train.olist.kaldi_to_htk_to_pfile
demo/scrf-scripts/: ilab2ctm.pl  ilab_PhnDur2Dur.pl  ilab_PhnDur2Phn.pl  prep_exp.sh  run.sh  run_crf_fstdecode.latest.sh  run_crf_fstdecode.sh  run_crf_fstdecode.sh.in  run_crf_train.latest.sh  run_crf_train.sh  run_crf_train.sh.in  sortResult.kaldi.sh  timit_score.new.sh
demo/timit-aux/: phn-dur-lab-map-timit.txt  symlist-timit.txt  timit_sisx_test.dt_set.neworder.olist  timit_train.48labs.ilab
demo/util/: map_ctm_3state_1state.pl  timit_score.sh.in
feacat/: Makefile.am  cle.c  cle.h  configure.ac  feacat.C
feacat/m4/: dpwe.m4
(+366 files in other folders)
