lib_LIBRARIES = libCRF.a
libCRF_a_SOURCES = src/trainers/gradbuilders/CRF_GradBuilder.cpp \
	src/trainers/gradbuilders/CRF_NewGradBuilderSoft.cpp \
	src/trainers/gradbuilders/CRF_NewGradBuilder.cpp \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg.cpp \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg_BrokenClass.cpp \
	src/trainers/gradbuilders/CRF_FerrGradBuilder.cpp \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg_NoDur_NoTrans.cpp \
	src/trainers/accumulators/CRF_GradAccumulator.cpp \
	src/trainers/accumulators/CRF_CountAccumulator.cpp \
	src/trainers/accumulators/CRF_Pthread_GradAccumulator.cpp \
	src/trainers/accumulators/CRF_Pthread_CountAccumulator.cpp \
	src/trainers/accumulators/CRF_Minibatch_GradAccumulator.cpp \
	src/trainers/CRF_LBFGSTrainer.cpp \
	src/trainers/CRF_Trainer.cpp \
	src/trainers/CRF_SGTrainer.cpp \
	src/trainers/CRF_AISTrainer.cpp \
	src/io/CRF_FeatureStreamManager.cpp \
	src/io/CRF_InFtrStream_SeqMultiWindow.cpp \
	src/io/CRF_InLabStream_SeqMultiWindow.cpp \
	src/io/CRF_FeatureStream.cpp \
	src/io/CRF_InFtrStream_RandPresent.cpp \
	src/io/CRF_MLFManager.cpp \
	src/io/CRF_InLabStream_RandPresent.cpp \
	src/utils/CRF_LogMath.cpp \
	src/utils/lbfgs.c \
	src/ftrmaps/CRF_StdSparseFeatureMap.cpp \
	src/ftrmaps/CRF_StdFeatureMap.cpp \
	src/ftrmaps/CRF_FeatureMap.cpp \
	src/nodes/CRF_StdNStateNode.cpp \
	src/nodes/CRF_StateNode.cpp \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab_WithoutSegTransFtr.cpp \
	src/nodes/CRF_StdStateNode.cpp \
	src/nodes/CRF_StdSegStateNode.cpp \
	src/nodes/CRF_StdSegNStateNode.cpp \
	src/nodes/CRF_StdSegNStateNode_WithoutDurLab.cpp \
	src/nodes/CRF_StdSegNStateNode_WithoutDurLab_WithoutSegTransFtr.cpp \
	src/nodes/CRF_StateVector.cpp \
	src/nodes/CRF_HNStateNode.cpp \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab_WithoutTransFtr.cpp \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab.cpp \
	src/decoders/CRF_ViterbiDecoder_StdSeg_NoSegTransFtr.cpp \
	src/decoders/CRF_LatticeBuilder_StdSeg_WithoutDurLab_WithoutSegTransFtr.cpp \
	src/decoders/CRF_NewLocalPosteriorBuilder.cpp \
	src/decoders/CRF_ViterbiNode_PruneTrans.cpp \
	src/decoders/CRF_ViterbiDecoder.cpp \
	src/decoders/CRF_LatticeBuilder_StdSeg.cpp \
	src/decoders/CRF_LatticeBuilder.cpp \
	src/decoders/CRF_LatticeBuilder_StdSeg_WithoutDurLab.cpp \
	src/CRF_Model.cpp
pkginclude_HEADERS = src/trainers/gradbuilders/CRF_NewGradBuilder.h \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg.h \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg_NoDur_NoTrans.h \
	src/trainers/gradbuilders/CRF_FerrGradBuilder.h \
	src/trainers/gradbuilders/CRF_NewGradBuilderSoft.h \
	src/trainers/gradbuilders/CRF_GradBuilder.h \
	src/trainers/gradbuilders/CRF_NewGradBuilder_StdSeg_BrokenClass.h \
	src/trainers/accumulators/CRF_GradAccumulator.h \
	src/trainers/accumulators/CRF_Pthread_CountAccumulator.h \
	src/trainers/accumulators/CRF_Minibatch_GradAccumulator.h \
	src/trainers/accumulators/CRF_Pthread_GradAccumulator.h \
	src/trainers/accumulators/CRF_CountAccumulator.h \
	src/trainers/CRF_Trainer.h \
	src/trainers/CRF_SGTrainer.h \
	src/trainers/CRF_AISTrainer.h \
	src/trainers/CRF_LBFGSTrainer.h \
	src/io/CRF_MLFManager.h \
	src/io/CRF_InLabStream_SeqMultiWindow.h \
	src/io/CRF_InLabStream_RandPresent.h \
	src/io/CRF_InFtrStream_SeqMultiWindow.h \
	src/io/CRF_FeatureStreamManager.h \
	src/io/CRF_InFtrStream_RandPresent.h \
	src/io/CRF_FeatureStream.h \
	src/utils/lbfgs.h \
	src/utils/CRF_Utils.h \
	src/utils/CRF_LogMath.h \
	src/utils/arithmetic_ansi.h \
	src/utils/arithmetic_sse_double.h \
	src/utils/arithmetic_sse_float.h \
	src/ftrmaps/CRF_StdFeatureMap.h \
	src/ftrmaps/CRF_FeatureMap.h \
	src/ftrmaps/CRF_StdSparseFeatureMap.h \
	src/nodes/CRF_StateNode.h \
	src/nodes/CRF_StdSegStateNode.h \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab_WithoutTransFtr.h \
	src/nodes/CRF_StdStateNode.h \
	src/nodes/CRF_StdSegNStateNode_WithoutDurLab.h \
	src/nodes/CRF_StdNStateNode.h \
	src/nodes/CRF_StdSegNStateNode_WithoutDurLab_WithoutSegTransFtr.h \
	src/nodes/CRF_StateVector.h \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab_WithoutSegTransFtr.h \
	src/nodes/CRF_HNStateNode.h \
	src/nodes/CRF_StdSegNStateNode.h \
	src/nodes/CRF_StdSegStateNode_WithoutDurLab.h \
	src/decoders/CRF_ViterbiNode_PruneTrans.h \
	src/decoders/CRF_LatticeBuilder_StdSeg_WithoutDurLab.h \
	src/decoders/CRF_LatticeBuilder.h \
	src/decoders/CRF_LatticeBuilder_StdSeg_WithoutDurLab_WithoutSegTransFtr.h \
	src/decoders/CRF_LatticeBuilder_StdSeg.h \
	src/decoders/CRF_ViterbiDecoder.h \
	src/decoders/CRF_NewLocalPosteriorBuilder.h \
	src/decoders/CRF_ViterbiDecoder_StdSeg_NoSegTransFtr.h \
	src/CRF.h \
	src/CRF_Model.h
libCRF_a_CPPFLAGS = -I$(QN_HEADERS)
libCRF_a_LIBADD = $(QN_LIBFILE)

