SUBDIRS = kaldi-mods
nobase_dist_pkgdata_DATA = \
	timit-aux/phn-dur-lab-map-timit.txt \
	timit-aux/symlist-timit.txt \
	timit-aux/timit_sisx_test.core.neworder.olist \
	timit-aux/timit_sisx_test.core+rest.neworder.olist \
	timit-aux/timit_sisx_test.dt_set.neworder.olist \
	timit-aux/timit_sisx_train.olist \
	timit-aux/timit_test39.mlf \
	timit-aux/timit_train.48labs.ilab \
	timit-aux/timit_train.mlf
