SUBDIRS = kaldi-mods
nobase_dist_pkglibexec_SCRIPTS = \
	scrf-scripts/run_crf_fstdecode.sh \
	scrf-scripts/run_crf_train.sh \
	scrf-scripts/prep_exp.sh \
	scrf-scripts/sortResult.kaldi.sh \
	util/ilab_PhnDur2Dur.pl \
	util/ilab_PhnDur2Phn.pl \
	util/ilab2ctm.pl \
	util/timit_score.sh \
	util/map_ctm_3state_1state.pl
nobase_dist_pkgdata_DATA = \
	timit-aux/phn-dur-lab-map-timit.txt \
	timit-aux/symlist-timit.txt \
	timit-aux/timit_sisx_test.core.neworder.olist \
	timit-aux/timit_sisx_test.core+rest.neworder.olist \
	timit-aux/timit_sisx_test.dt_set.neworder.olist \
	timit-aux/timit_sisx_train.olist \
	timit-aux/timit_test39.mlf \
	timit-aux/timit_train.48labs.ilab \
	timit-aux/timit_train.mlf
